--- a/Yandex Coderun.ipynb
+++ b/Yandex Coderun.ipynb
@@ -389,9 +389,317 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da2024b7-3dce-4774-98fc-b4dec133228b",
+   "metadata": {},
+   "source": [
+    "5. Кафе\n",
+    "\n",
+    "    средняяdynamic programming 2D\n",
+    "\n",
+    "Около Петиного университета недавно открылось новое кафе, в котором действует следующая система скидок: при каждой покупке более чем на 100 рублей покупатель получает купон, дающий право на один бесплатный обед (при покупке на сумму 100 рублей и меньше такой купон покупатель не получает).\n",
+    "\n",
+    "Однажды Пете на глаза попался прейскурант на ближайшие N дней. Внимательно его изучив, он решил, что будет обедать в этом кафе все N дней, причем каждый день он будет покупать в кафе ровно один обед. Однако стипендия у Пети небольшая, и поэтому он хочет по максимуму использовать предоставляемую систему скидок так, чтобы его суммарные затраты были минимальны. Требуется найти минимально возможную суммарную стоимость обедов и номера дней, в которые Пете следует воспользоваться купонами.\n",
+    "Формат ввода\n",
+    "\n",
+    "В первой строке входного файла записано целое число N (0 ≤≤ N ≤≤ 100). В каждой из последующих N строк записано одно целое число, обозначающее стоимость обеда в рублях на соответствующий день. Стоимость — неотрицательное целое число, не превосходящее 300.\n",
+    "Формат вывода\n",
+    "\n",
+    "В первой строке выдайте минимальную возможную суммарную стоимость обедов. Во второй строке выдайте два числа K1K1​ и K2K2​ — количество купонов, которые останутся неиспользованными у Пети после этих N дней и количество использованных им купонов соответственно.\n",
+    "\n",
+    "В последующих K2K2​ строках выдайте в возрастающем порядке номера дней, когда Пете следует воспользоваться купонами. Если существует несколько решений с минимальной суммарной стоимостью, то выдайте то из них, в котором значение K1K1​ максимально (на случай, если Петя когда-нибудь ещё решит заглянуть в это кафе). Если таких решений несколько, выведите любое из них."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "15cacad1-1b31-4c44-bbf7-ca948aaff95a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, [], 0, 0]]\n",
+      "[[35, [], 0, 0]]\n",
+      "[[75, [], 0, 0]]\n",
+      "[[176, [], 1, 0]]\n",
+      "[[176, [3], 0, 1], [235, [], 1, 0]]\n",
+      "[[239, [3], 0, 1], [235, [4], 0, 1], [298, [], 1, 0]]\n",
+      "[[341, [3], 1, 1], [337, [4], 1, 1], [298, [5], 0, 1], [400, [], 2, 0]]\n",
+      "[[341, [3, 6], 0, 2], [445, [3], 2, 1], [337, [4, 6], 0, 2], [441, [4], 2, 1], [402, [5], 1, 1], [400, [6], 1, 1], [504, [], 3, 0]]\n",
+      "[[444, [3, 6], 1, 2], [445, [3, 7], 1, 2], [548, [3], 3, 1], [440, [4, 6], 1, 2], [441, [4, 7], 1, 2], [544, [4], 3, 1], [402, [5, 7], 0, 2], [505, [5], 2, 1], [400, [6, 7], 0, 2], [503, [6], 2, 1]]\n",
+      "[[444, [3, 6, 8], 0, 3], [544, [3, 6], 1, 2], [445, [3, 7, 8], 0, 3], [545, [3, 7], 1, 2], [440, [4, 6, 8], 0, 3], [540, [4, 6], 1, 2], [441, [4, 7, 8], 0, 3], [541, [4, 7], 1, 2], [502, [5, 7], 0, 2], [500, [6, 7], 0, 2]]\n",
+      "440\n",
+      "0 3\n",
+      "5 7 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    Для чтения входных данных необходимо получить их\n",
+    "    из стандартного потока ввода (sys.stdin).\n",
+    "    Данные во входном потоке соответствуют описанному\n",
+    "    в условии формату. Обычно входные данные состоят\n",
+    "    из нескольких строк.\n",
+    "    Можно использовать несколько методов:\n",
+    "    * input() -- читает одну строку из потока без символа\n",
+    "    перевода строки;\n",
+    "    * sys.stdin.readline() -- читает одну строку из потока,\n",
+    "    сохраняя символ перевода строки в конце;\n",
+    "    * sys.stdin.readlines() -- вернет список (list) строк,\n",
+    "    сохраняя символ перевода строки в конце каждой из них.\n",
+    "    Чтобы прочитать из строки стандартного потока:\n",
+    "    * число -- int(input()) # в строке должно быть одно число\n",
+    "    * строку -- input()\n",
+    "    * массив чисел -- map(int, input().split())\n",
+    "    * последовательность слов -- input().split()\n",
+    "    Чтобы вывести результат в стандартный поток вывода (sys.stdout),\n",
+    "    можно использовать функцию print() или sys.stdout.write().\n",
+    "    Возможное решение задачи \"Вычислите сумму чисел в строке\":\n",
+    "    print(sum(map(int, input().split())))\n",
+    "    \"\"\"\n",
+    "    N = 9\n",
+    "    prices = [35,\n",
+    "        40,\n",
+    "        101,\n",
+    "        59,\n",
+    "        63,\n",
+    "        102,\n",
+    "        104,\n",
+    "        103,\n",
+    "        100]\n",
+    "    # N = int(input())\n",
+    "    # prices = []\n",
+    "    # for i in range(N):\n",
+    "    #     prices.append(int(input()))\n",
+    "\n",
+    "    sums = [[[0, 0, 0]] for i in range(N+1)]\n",
+    "\n",
+    "    days_used_coupon = []\n",
+    "    num_of_coupons_available = 0\n",
+    "    num_of_coupons_used = 0\n",
+    "    price_for_today = 0\n",
+    "\n",
+    "    sums[0][0] = [price_for_today, days_used_coupon, num_of_coupons_available, num_of_coupons_used]\n",
+    "\n",
+    "    #REMEBER LAST DAY COUPON!!!!\n",
+    "    for i in range(N):\n",
+    "        for j in range(len(sums[i])):\n",
+    "            num_of_coupons_available = sums[i][j][2]\n",
+    "            num_of_coupons_used = sums[i][j][3]\n",
+    "            days_remaining = N - i - 1\n",
+    "            if (days_remaining + 2) > num_of_coupons_available:\n",
+    "                #use coupon - create branch\n",
+    "                if num_of_coupons_available > 0:\n",
+    "                    days_used_coupon_path = sums[i][j][1].copy()\n",
+    "                    days_used_coupon_path.append(i)\n",
+    "                    num_of_coupons_available -= 1\n",
+    "                    num_of_coupons_used += 1\n",
+    "                    price_for_today = sums[i][j][0]\n",
+    "                    if sums[i+1][0] == [0, 0, 0]: #DANGER WITH LAST ITEM!!!!!!\n",
+    "                        sums[i+1][0] = [price_for_today, days_used_coupon_path, num_of_coupons_available, num_of_coupons_used]\n",
+    "                    else:\n",
+    "                        sums[i+1].append([price_for_today, days_used_coupon_path, num_of_coupons_available, num_of_coupons_used])\n",
+    "                #don't use coupon - always create branch\n",
+    "                days_used_coupon_path = sums[i][j][1].copy()\n",
+    "                price_for_today = sums[i][j][0] + prices[i]\n",
+    "                \n",
+    "                num_of_coupons_available = sums[i][j][2]\n",
+    "                num_of_coupons_used = sums[i][j][3]\n",
+    "                if prices[i] > 100:\n",
+    "                    num_of_coupons_available += 1\n",
+    "                if sums[i+1][0] == [0, 0, 0]: #DANGER WITH LAST ITEM!!!!!!\n",
+    "                    sums[i+1][0] = [price_for_today, days_used_coupon_path, num_of_coupons_available, num_of_coupons_used]\n",
+    "                else:\n",
+    "                    sums[i+1].append([price_for_today, days_used_coupon_path, num_of_coupons_available, num_of_coupons_used])\n",
+    "\n",
+    "        # if i > 0:\n",
+    "        #     sums[i] = 0\n",
+    "    for i in range(N+1):\n",
+    "        print(sums[i])\n",
+    "    # print(len(sums[N]))\n",
+    "\n",
+    "    # min_sum_item = min(sums[N], key=lambda x: x[0])\n",
+    "\n",
+    "    min_sum = 100000000\n",
+    "    min_sum_item = []\n",
+    "    for i in range(len(sums[N])):\n",
+    "        if sums[N][i][0] < min_sum:\n",
+    "            min_sum = sums[N][i][0]\n",
+    "            min_sum_item = sums[N][i]\n",
+    "        elif sums[N][i][0] == min_sum:\n",
+    "            if min_sum_item[2] < sums[N][i][2]:\n",
+    "                min_sum_item = sums[N][i]\n",
+    "    \n",
+    "    min_sum = min_sum_item[0]\n",
+    "    coup_remain = min_sum_item[2]\n",
+    "    coup_used = min_sum_item[3]\n",
+    "    path = min_sum_item[1]\n",
+    "    for i in range(len(path)):\n",
+    "        path[i] += 1\n",
+    "        \n",
+    "    print(min_sum)\n",
+    "    print(coup_remain, coup_used)\n",
+    "    print(*path)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2cc7572-f3b4-40fb-b85f-c55131aabe14",
+   "id": "8ac08426-8687-4928-979c-ccffd83991a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "440\n",
+    "0 3\n",
+    "5 7 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "9ab251e7-6dfc-4a02-9729-a82d72688816",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[35, 75]\n",
+      "[]\n",
+      "ADDED COUPON AT INDEX  2\n",
+      "1\n",
+      "[35, 75, 176]\n",
+      "[]\n",
+      "0\n",
+      "[35, 75, 176, 176]\n",
+      "[3]\n",
+      "0\n",
+      "[35, 75, 176, 176, 235]\n",
+      "[4]\n",
+      "0\n",
+      "[35, 75, 176, 176, 235, 298]\n",
+      "[5]\n",
+      "REVIVED COUPON FROM INDEX  5 WHILE ON INDEX  6\n",
+      "1\n",
+      "[35, 75, 176, 176, 235, 298, 400]\n",
+      "[6]\n",
+      "0\n",
+      "[35, 75, 176, 176, 235, 298, 400, 400]\n",
+      "[6, 7]\n",
+      "0\n",
+      "[35, 75, 176, 176, 235, 298, 400, 400, 500]\n",
+      "[6, 7]\n",
+      "[35, 75, 176, 176, 235, 298, 400, 400, 500]\n",
+      "[6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    Для чтения входных данных необходимо получить их\n",
+    "    из стандартного потока ввода (sys.stdin).\n",
+    "    Данные во входном потоке соответствуют описанному\n",
+    "    в условии формату. Обычно входные данные состоят\n",
+    "    из нескольких строк.\n",
+    "    Можно использовать несколько методов:\n",
+    "    * input() -- читает одну строку из потока без символа\n",
+    "    перевода строки;\n",
+    "    * sys.stdin.readline() -- читает одну строку из потока,\n",
+    "    сохраняя символ перевода строки в конце;\n",
+    "    * sys.stdin.readlines() -- вернет список (list) строк,\n",
+    "    сохраняя символ перевода строки в конце каждой из них.\n",
+    "    Чтобы прочитать из строки стандартного потока:\n",
+    "    * число -- int(input()) # в строке должно быть одно число\n",
+    "    * строку -- input()\n",
+    "    * массив чисел -- map(int, input().split())\n",
+    "    * последовательность слов -- input().split()\n",
+    "    Чтобы вывести результат в стандартный поток вывода (sys.stdout),\n",
+    "    можно использовать функцию print() или sys.stdout.write().\n",
+    "    Возможное решение задачи \"Вычислите сумму чисел в строке\":\n",
+    "    print(sum(map(int, input().split())))\n",
+    "    \"\"\"\n",
+    "    N = 9\n",
+    "    prices = [35,\n",
+    "        40,\n",
+    "        101,\n",
+    "        59,\n",
+    "        63,\n",
+    "        102,\n",
+    "        104,\n",
+    "        103,\n",
+    "        100]\n",
+    "    # N = int(input())\n",
+    "    # prices = []\n",
+    "    # for i in range(N):\n",
+    "    #     prices.append(int(input()))\n",
+    "\n",
+    "    days_we_used_coupon = []\n",
+    "    coupons_available = 0\n",
+    "    best_sums = []\n",
+    "    \n",
+    "    if N > 0:\n",
+    "        best_sums.append(prices[0])\n",
+    "        if prices[0] > 100:\n",
+    "            coupons_available += 1\n",
+    "            \n",
+    "    for i in range(1, N):\n",
+    "        if coupons_available > 0:\n",
+    "            coupons_available -= 1\n",
+    "            days_we_used_coupon.append(i)\n",
+    "            best_sums.append(best_sums[i-1])\n",
+    "        elif len(days_we_used_coupon) > 0:\n",
+    "            switch_day = i\n",
+    "            for day in days_we_used_coupon:\n",
+    "                if (prices[day] < prices[i]) and (prices[day] < prices[switch_day]):\n",
+    "                    switch_day = day\n",
+    "            if switch_day != i:\n",
+    "                del(days_we_used_coupon[days_we_used_coupon.index(switch_day)])\n",
+    "                if prices[switch_day] > 100:\n",
+    "                    coupons_available += 1\n",
+    "                    print('REVIVED COUPON FROM INDEX ', switch_day, 'WHILE ON INDEX ', i)\n",
+    "                best_sums.append(best_sums[i-1] + prices[switch_day])\n",
+    "                days_we_used_coupon.append(i)\n",
+    "            else:\n",
+    "                best_sums.append(best_sums[i-1] + prices[i])\n",
+    "                if prices[i] > 100:\n",
+    "                    coupons_available += 1\n",
+    "                    print('ADDED COUPON AT INDEX ', i)\n",
+    "        else:\n",
+    "            best_sums.append(best_sums[i-1] + prices[i])\n",
+    "            if prices[i] > 100:\n",
+    "                coupons_available += 1\n",
+    "                print('ADDED COUPON AT INDEX ', i)\n",
+    "\n",
+    "        print(coupons_available)\n",
+    "        print(best_sums)\n",
+    "        print(days_we_used_coupon)\n",
+    "\n",
+    "    print(best_sums)\n",
+    "    print(days_we_used_coupon)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75b0009a-a790-4645-be88-42ad91465b5d",
    "metadata": {},
    "outputs": [],
    "source": []
