--- a/Прикладной анализ данных.ipynb
+++ b/Прикладной анализ данных.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "874f0477-a8b0-4930-ab0f-8de08b23459a",
    "metadata": {},
    "outputs": [],
@@ -829,6 +829,448 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e8d5e4e0-1fa9-41ca-9656-edd30ac865a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6d3c26-a733-43db-9d35-3eedb356996b",
+   "metadata": {},
+   "source": [
+    "## 04. Категориальные данные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d2f2878-cece-4b6e-bf3d-aa3387f9fbe5",
+   "metadata": {},
+   "source": [
+    "Ознакомление с датасетом\n",
+    "\n",
+    "В этой и последующих задачах мы будем работать с датасетом влияния COVID-19 на образование, психическое здоровье и распорядок дня учащихся. Ознакомиться с полной версией датасета можно по ссылке: https://www.kaggle.com/datasets/kunal28chaturvedi/covid19-and-its-impact-on-students.\n",
+    "\n",
+    "Датасет доступен под названием 'COVID-19 SSR.csv'\n",
+    "\n",
+    "В датасете содержатся такие переменные как время на занятия, самостоятельное обучение, просмотр страниц в социальных сетях в день, а также соц-демографические характеристики учащихся (возраст, регион проживания) и другие.\n",
+    "\n",
+    "Вам необходимо вывести наиболее частый тип переменных встречаемый в датасете."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "74dd9a23-f41a-4446-9037-d0ef33a82d4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = 'COVID-19 SSR.csv'\n",
+    "df = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b803101c-cd51-437c-978b-4413f97ecf36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Region of residence</th>\n",
+       "      <th>Age of Subject</th>\n",
+       "      <th>Time spent on Online Class</th>\n",
+       "      <th>Rating of Online Class experience</th>\n",
+       "      <th>Medium for online class</th>\n",
+       "      <th>Time spent on self study</th>\n",
+       "      <th>Time spent on fitness</th>\n",
+       "      <th>Time spent on sleep</th>\n",
+       "      <th>Time spent on social media</th>\n",
+       "      <th>Prefered social media platform</th>\n",
+       "      <th>Time spent on TV</th>\n",
+       "      <th>Number of meals per day</th>\n",
+       "      <th>Change in your weight</th>\n",
+       "      <th>Health issue during lockdown</th>\n",
+       "      <th>Stress busters</th>\n",
+       "      <th>Time utilized</th>\n",
+       "      <th>Do you find yourself more connected with your family, close friends , relatives  ?</th>\n",
+       "      <th>What you miss the most</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>R1</td>\n",
+       "      <td>Delhi-NCR</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>GOOD</td>\n",
+       "      <td>Laptop/Desktop</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Linkedin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Increased</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Cooking</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>School/college</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>R2</td>\n",
+       "      <td>Delhi-NCR</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EXCELLENT</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Youtube</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Decreased</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Scrolling through social media</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Roaming around freely</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>R3</td>\n",
+       "      <td>Delhi-NCR</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>VERY POOR</td>\n",
+       "      <td>Laptop/Desktop</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Linkedin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Remain Constant</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Listening to music</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>Travelling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>R4</td>\n",
+       "      <td>Delhi-NCR</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>VERY POOR</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Instagram</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Decreased</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Watching web series</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Friends , relatives</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>R5</td>\n",
+       "      <td>Delhi-NCR</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GOOD</td>\n",
+       "      <td>Laptop/Desktop</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Instagram</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Remain Constant</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Travelling</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  ID Region of residence  Age of Subject  \\\n",
+       "0           0  R1           Delhi-NCR              21   \n",
+       "1           1  R2           Delhi-NCR              21   \n",
+       "2           2  R3           Delhi-NCR              20   \n",
+       "3           3  R4           Delhi-NCR              20   \n",
+       "4           4  R5           Delhi-NCR              21   \n",
+       "\n",
+       "   Time spent on Online Class Rating of Online Class experience  \\\n",
+       "0                         2.0                              GOOD   \n",
+       "1                         0.0                         EXCELLENT   \n",
+       "2                         7.0                         VERY POOR   \n",
+       "3                         3.0                         VERY POOR   \n",
+       "4                         3.0                              GOOD   \n",
+       "\n",
+       "  Medium for online class  Time spent on self study  Time spent on fitness  \\\n",
+       "0          Laptop/Desktop                       4.0                    0.0   \n",
+       "1              Smartphone                       0.0                    2.0   \n",
+       "2          Laptop/Desktop                       3.0                    0.0   \n",
+       "3              Smartphone                       2.0                    1.0   \n",
+       "4          Laptop/Desktop                       3.0                    1.0   \n",
+       "\n",
+       "   Time spent on sleep  Time spent on social media  \\\n",
+       "0                  7.0                         3.0   \n",
+       "1                 10.0                         3.0   \n",
+       "2                  6.0                         2.0   \n",
+       "3                  6.0                         5.0   \n",
+       "4                  8.0                         3.0   \n",
+       "\n",
+       "  Prefered social media platform Time spent on TV  Number of meals per day  \\\n",
+       "0                       Linkedin                1                        4   \n",
+       "1                        Youtube                0                        3   \n",
+       "2                       Linkedin                0                        3   \n",
+       "3                      Instagram                0                        3   \n",
+       "4                      Instagram                1                        4   \n",
+       "\n",
+       "  Change in your weight Health issue during lockdown  \\\n",
+       "0             Increased                           NO   \n",
+       "1             Decreased                           NO   \n",
+       "2       Remain Constant                           NO   \n",
+       "3             Decreased                           NO   \n",
+       "4       Remain Constant                           NO   \n",
+       "\n",
+       "                   Stress busters Time utilized  \\\n",
+       "0                         Cooking           YES   \n",
+       "1  Scrolling through social media           YES   \n",
+       "2              Listening to music            NO   \n",
+       "3             Watching web series            NO   \n",
+       "4                    Social Media            NO   \n",
+       "\n",
+       "  Do you find yourself more connected with your family, close friends , relatives  ?  \\\n",
+       "0                                                YES                                   \n",
+       "1                                                 NO                                   \n",
+       "2                                                YES                                   \n",
+       "3                                                 NO                                   \n",
+       "4                                                 NO                                   \n",
+       "\n",
+       "  What you miss the most  \n",
+       "0         School/college  \n",
+       "1  Roaming around freely  \n",
+       "2             Travelling  \n",
+       "3    Friends , relatives  \n",
+       "4             Travelling  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5629dca0-32db-484d-a759-f1d5ffaee3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>object</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>int64</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index  count\n",
+       "0   object     12\n",
+       "1  float64      5\n",
+       "2    int64      3"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.dtypes.value_counts().reset_index()\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "a236f428-92d0-4e9a-946f-3a5f900dfb09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.dtypes.value_counts().idxmax())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f3f3a1f-8ac8-48ce-b4ed-62e2917455ab",
+   "metadata": {},
+   "source": [
+    "Изменяем капслок\n",
+    "\n",
+    "Не всегда данные в одной колонке имеют одинаковое оформление. Например, одно значение написано буквами верхнего регистра, а другое - нижнего. Для приведения значений в категориальных переменных к одному виду существует набор функций.\n",
+    "\n",
+    "title() - преобразовывает слова в формате title, где первое слово в строке начинается с символа верхнего регистра, а остальные приводятся к символам нижнего регистра (Например, \"привет, студенты!\" преобразуется в \"Привет, студенты!\").\n",
+    "\n",
+    "В датасете'COVID-19 SSR.csv' в переменной 'Rating of Online Class experience' все значения записаны символами верхнего регистра (Например, \"GOOD\").\n",
+    "\n",
+    "Вам необходимо привести значения переменной 'Rating of Online Class experience' к значению \"GOOD\" с помощью функции title(). Например, df('Название переменной').str.title().\n",
+    "\n",
+    "В выдаче выведите пять первых значения переменной 'Rating of Online Class experience'.\n",
+    "\n",
+    "Датасет доступен под названием 'COVID-19 SSR.csv'\n",
+    "Формат вывода\n",
+    "\n",
+    "0 Good\n",
+    "1 Very Poor\n",
+    "2 Good\n",
+    "3 Very Poor\n",
+    "4 Excellent\n",
+    "Name: Rating of Online Class experience, dtype: object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "602982b6-2135-45d9-95cd-ceb03644da36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         Good\n",
+      "1    Excellent\n",
+      "2    Very Poor\n",
+      "3    Very Poor\n",
+      "4         Good\n",
+      "Name: Rating of Online Class experience, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Rating of Online Class experience'] = df['Rating of Online Class experience'].str.title()\n",
+    "print(df['Rating of Online Class experience'].head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b80a2b7a-fd27-4566-8c8b-ece5333d951d",
+   "metadata": {},
+   "source": [
+    "Сколько спят учащиеся?\n",
+    "\n",
+    "В нашем датасете есть переменная, указывающая на среднее количество сна в день ['Time spent on sleep']. Для здорового человека нормально спать 7-8 часов. Но учащиеся могут спать больше или меньше необходимого времени сна. То есть они могут спать например меньше 7 (6.9 часов) и больше 8 часов. Оптимальным количеством сна является 7-8 часов сна.\n",
+    "\n",
+    "Вам необходимо вывести количество учащихся, которые спят больше или меньше оптимального времени для сна. Одним из способом решения этой переменной будут следующие шаги:\n",
+    "\n",
+    "    Воспользоваться циклом для создания новой переменной (название которой может быть 'Sleep') по переменной['Time spent on sleep'] , где необходимо прописать следующие условия. Если ['Time spent on sleep'] меньше 9, но при этом больше 6.9, то это нормальное количество сна ('normal'), в другом случае значение переменной будет 'not normal'.\n",
+    "    Сделать фильтр по новой переменной, таким образом, чтобы мы оставили строки со значением сна'not normal'.\n",
+    "    Вывести количество строк отфильтрованного датасета (например, с помощью функции 'len()').\n",
+    "\n",
+    "Датасет доступен под названием 'COVID-19 Survey Student Responses.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f1b84b-03f0-4d94-91cc-177b949e67d1",
    "metadata": {},
    "outputs": [],
    "source": []
